[gd_scene load_steps=21 format=3 uid="uid://y4uux171hn67"]

[ext_resource type="PackedScene" uid="uid://bvre2wc3l5ptg" path="res://tscndosyalari/menu/AnaMenuyeDonTusu.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://68djdercg4if" path="res://tscndosyalari/menu/ParaTablo.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bjiil02fey4fp" path="res://resimler/arkaplan/anamenuarka7.png" id="3"]
[ext_resource type="Script" path="res://script/menu/Galeri.gd" id="4"]
[ext_resource type="Script" path="res://script/menu/Scroll.gd" id="5"]
[ext_resource type="FontFile" uid="uid://bmlwcjr2l8mks" path="res://font/hemi-head-426.rg-bolditalic.ttf" id="6"]
[ext_resource type="FontFile" path="res://font/new_dynamicfont.tres" id="7"]
[ext_resource type="Texture2D" uid="uid://b4dy11we1xl3h" path="res://resimler/menu/garaj/ae86t.png" id="8"]
[ext_resource type="Texture2D" uid="uid://rj5hnol7a8ok" path="res://resimler/menu/garaj/stect.png" id="9"]
[ext_resource type="Script" path="res://script/menu/koyumod.gd" id="10"]

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="10"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="Theme" id="11"]
HScrollBar/styles/scroll = SubResource("9")
ScrollContainer/styles/bg = SubResource("10")

[sub_resource type="StyleBoxFlat" id="32"]
bg_color = Color(0.184314, 0.0117647, 0.0117647, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.133333, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 40.0
expand_margin_top = 20.0
expand_margin_right = 40.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="33"]
bg_color = Color(0.32549, 0.0352941, 0.0352941, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.392157, 0.0862745, 0.0862745, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 40.0
expand_margin_top = 20.0
expand_margin_right = 40.0
expand_margin_bottom = 20.0

[sub_resource type="FontFile" id="28"]
fallbacks = Array[Font]([ExtResource("6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="29"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_top = 64.0
expand_margin_bottom = 68.0

[sub_resource type="Theme" id="23"]
default_font = ExtResource("7")
Button/styles/hover = SubResource("32")
Button/styles/normal = SubResource("33")
Button/styles/pressed = SubResource("32")
Popup/styles/panel = null
PopupPanel/styles/panel = null
TabContainer/colors/font_color_bg = Color(0.69, 0.69, 0.69, 1)
TabContainer/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
TabContainer/colors/font_color_fg = Color(0.94, 0.94, 0.94, 1)
TabContainer/constants/h_separation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = ExtResource("7")
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = null
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = null
Window/colors/title_color = Color(1, 0, 0, 1)
Window/constants/close_h_offset = 83
Window/constants/close_v_offset = -43
Window/constants/scaleborder_size = 6
Window/constants/title_height = -96
Window/fonts/title_font = SubResource("28")
Window/icons/close = null
Window/icons/close_highlight = null
Window/styles/panel = SubResource("29")

[sub_resource type="StyleBoxFlat" id="26"]
bg_color = Color(0.509804, 0.054902, 0.054902, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="27"]
bg_color = Color(0.807843, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="Galeri" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-532, -34)
theme = SubResource("11")
script = ExtResource("4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3")
expand_mode = 1
script = ExtResource("10")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -696.0
offset_top = -296.0
offset_right = 728.0
offset_bottom = 216.0
color = Color(0, 0, 0, 0.490196)

[node name="anamenuyedon" parent="." instance=ExtResource("1")]
offset_left = 0.0
offset_right = 0.0

[node name="HScrollBar" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 170.0
offset_right = 1280.0
offset_bottom = 576.0
script = ExtResource("5")

[node name="HBoxContainer" type="HBoxContainer" parent="HScrollBar"]
custom_minimum_size = Vector2(0, 405)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="spacer" type="Control" parent="HScrollBar/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Araba0" type="Control" parent="HScrollBar/HBoxContainer"]
custom_minimum_size = Vector2(250, 400)
layout_mode = 2

[node name="tico" type="TextureButton" parent="HScrollBar/HBoxContainer/Araba0"]
custom_minimum_size = Vector2(250, 400)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -200.0
offset_right = 125.0
offset_bottom = 200.0
focus_mode = 0
texture_normal = ExtResource("9")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("9")

[node name="Araba1" type="Control" parent="HScrollBar/HBoxContainer"]
custom_minimum_size = Vector2(250, 400)
layout_mode = 2

[node name="ae86" type="TextureButton" parent="HScrollBar/HBoxContainer/Araba1"]
custom_minimum_size = Vector2(250, 400)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -405.0
offset_right = 125.0
focus_mode = 0
texture_normal = ExtResource("8")
texture_pressed = ExtResource("8")
texture_hover = ExtResource("8")

[node name="Araba2" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
focus_mode = 0

[node name="Araba3" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
focus_mode = 0

[node name="Araba4" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
focus_mode = 0

[node name="Araba5" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
focus_mode = 0

[node name="Araba6" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
focus_mode = 0

[node name="Araba7" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
focus_mode = 0

[node name="Araba8" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
focus_mode = 0

[node name="Araba9" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
focus_mode = 0

[node name="Araba10" type="Button" parent="HScrollBar/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
focus_mode = 0

[node name="spacer2" type="Control" parent="HScrollBar/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="uyar覺" type="Window" parent="."]
theme = SubResource("23")

[node name="Label" type="Label" parent="uyar覺"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -135.5
offset_right = 298.0
offset_bottom = 135.5
text = "5000 paraya daha ihtiyac覺n var."

[node name="Button" type="Button" parent="uyar覺"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -98.0
offset_right = 125.0
focus_mode = 0
theme_override_styles/normal = SubResource("26")
theme_override_styles/hover = SubResource("26")
theme_override_styles/pressed = SubResource("27")
text = "Tamam"

[node name="bilgi" type="ConfirmationDialog" parent="."]
theme = SubResource("23")

[node name="BilgiText" type="Label" parent="bilgi"]
custom_minimum_size = Vector2(600, 375)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -254.5
offset_right = 392.0
offset_bottom = 199.5
text = "AE86"

[node name="ParaTablo" parent="." instance=ExtResource("2")]
layout_mode = 1

[connection signal="pressed" from="HScrollBar/HBoxContainer/Araba0/tico" to="." method="_on_Araba1_pressed"]
[connection signal="pressed" from="HScrollBar/HBoxContainer/Araba1/ae86" to="." method="_on_Araba0_pressed"]
[connection signal="pressed" from="uyar覺/Button" to="." method="_on_Button_pressed"]
[connection signal="confirmed" from="bilgi" to="." method="_on_bilgi_confirmed"]
